[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "atlas"
version = "0.1.0"
description = "AI value-chain research engine"
requires-python = ">=3.11"
dependencies = [
  "yfinance>=0.2.40",
  "pandas>=2.2",
  "pyarrow>=16",
  "pandera>=0.20",
  "duckdb>=1.0",
  "dbt-duckdb>=1.8",
  "pyyaml>=6",
  "pydantic>=2.7",
  "networkx>=3.3",
  "numpy>=1.26",
  "scipy>=1.13",
  "plotly>=5.22",
  "streamlit>=1.36",
  "requests>=2.32",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov>=5", "ruff>=0.5"]

[tool.setuptools]
py-modules = ["config"]

[tool.setuptools.packages.find]
include = ["ingest*", "analysis*", "app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]
testpaths = ["tests"]

[tool.coverage.run]
source = ["ingest", "analysis", "app"]
# streamlit_app.py is UI glue (no unit tests by design); tests are not self-measured.
omit = ["tests/*", "app/streamlit_app.py"]

[tool.coverage.report]
# IO/orchestration boundaries are exercised via the integration (make all / dbt fixture
# build), not unit tests. Mark them `# pragma: no cover`; also exclude __main__ guards.
exclude_also = [
  "if __name__ == .__main__.:",
  "# pragma: no cover",
]
